--- a/requirements.txt
+++ b/requirements.txt
@@ -1,51 +1,84 @@
+arviz==0.20.0
 astroid==3.3.5
 attrs==24.2.0
+cachetools==5.5.0
 certifi==2024.8.30
+cftime==1.6.4.post1
 click==8.1.7
 click-plugins==1.1.1
 cligj==0.7.2
+cloudpickle==3.1.0
+cons==0.4.6
 contourpy==1.3.0
 cycler==0.12.1
 dill==0.3.9
+etuples==0.3.9
 fastjsonschema==2.20.0
+filelock==3.16.1
 fiona==1.9.5
 fonttools==4.53.1
 geopandas==0.14.4
 gerrychain==0.3.2
+graphviz==0.20.3
+h5netcdf==1.4.1
+h5py==3.12.1
 isort==5.13.2
+jax==0.4.37
+jaxlib==0.4.36
+joblib==1.4.2
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
 jupyter_core==5.7.2
 jupytext==1.16.4
 kiwisolver==1.4.7
+llvmlite==0.43.0
+logical-unification==0.4.6
 markdown-it-py==3.0.0
 matplotlib==3.9.2
 maup==2.0.2
 mccabe==0.7.0
 mdit-py-plugins==0.4.2
 mdurl==0.1.2
+miniKanren==1.0.3
+ml_dtypes==0.5.0
+multipledispatch==1.0.0
 nbformat==5.10.4
+netCDF4==1.7.2
 networkx==3.3
+numba==0.60.0
 numpy==1.26.4
+numpyro==0.16.1
+opt_einsum==3.4.0
 packaging==24.1
 pandas==2.2.2
 pillow==10.4.0
 platformdirs==4.3.6
+pyei==1.1.2
+Pygments==2.18.0
 pylint==3.3.1
+pymc==5.19.1
 pyogrio==0.9.0
 pyparsing==3.1.4
 pyproj==3.6.1
+pytensor==2.26.4
 python-dateutil==2.9.0.post0
 pytz==2024.2
 PyYAML==6.0.2
 referencing==0.35.1
+rich==13.9.4
 rpds-py==0.20.0
+scikit-learn==1.6.0
 scipy==1.14.1
+seaborn==0.13.2
 shapely==2.0.2
 six==1.16.0
+threadpoolctl==3.5.0
 tomli==2.0.1
 tomlkit==0.13.2
+toolz==1.0.0
 tqdm==4.67.1
 traitlets==5.14.3
 typing_extensions==4.12.2
 tzdata==2024.1
+xarray==2024.11.0
+xarray-einstats==0.8.0
